@@ -12,6 +12,9 @@ Revision history for Perl extension Module::Build.
 
  - Workaround Test::Pod::Coverage @INC bug. [Eric Wilhelm]
 
+ - Fixed the command-line args --extra_compiler_flags and
+   --extra_linker_flags so they properly shell-split their arguments.
+
 0.2807 - Sat Mar 24 22:19:02 2007
 
  - Upgraded to version.pm 0.71. [John Peacock]
